--- a/src/app.json
+++ b/src/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/logs/main",
-    "pages/counter/main",
+    "pages/news/news-list/main",
+    "pages/person/main",
+    "pages/data/main",
     "pages/news/news-detail/main"
   ],
   "window": {
@@ -24,17 +25,17 @@
       "selectedIconPath": "static/tabs/home_active.png"
     }, {
       "text": "资讯",
-      "pagePath": "pages/logs/main",
+      "pagePath": "pages/news/news-list/main",
       "iconPath": "static/tabs/news.png",
       "selectedIconPath": "static/tabs/news_active.png"
     }, {
       "text": "客户",
-      "pagePath": "pages/index/main",
+      "pagePath": "pages/person/main",
       "iconPath": "static/tabs/person.png",
       "selectedIconPath": "static/tabs/person_active.png"
     }, {
       "text": "数据",
-      "pagePath": "pages/logs/main",
+      "pagePath": "pages/data/main",
       "iconPath": "static/tabs/data.png",
       "selectedIconPath": "static/tabs/data_active.png"
     }],
