--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "mpvue": "^2.0.0",
+    "mpvue-picker": "^2.1.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
